<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MouseDroidActivity!</string>
    <string name="app_name">Mouse Droid</string>
    <string name="flurry_enabled_summary_off">Help Improve This App By Providing Anonymous Usage Data</string>
    <string name="flurry_enabled_summary_on">Anonymous Data Will Be Sent To Flurry Analytics To Help Improve This App</string>
    <string name="flurry_enabled_title">Send Usage Data</string>
    <string name="theme_title">Change Skin</string>
    <string name="theme_summary">Changes the look and feel of the app.</string>
    <string name="bt_not_enabled_quit">Bluetooth Not Enabled, Cannot Continue</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">select a device to connect</string>
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="htcbluetoothcompat_summaryOff">Enable this if you are having trouble connecting on an HTC phone.</string>
    <string name="htcbluetoothcompat_summaryOn">Bypasses an internal issue on some HTC devices</string>
    <string name="htcbluetoothcompat_title">Enable HTC Bluetooth Compatibility</string>
    <string name="key_vibrate_summaryOff">Buttons will not vibrate when pressed</string>
    <string name="key_vibrate_summaryOn">Buttons will vibrate when pressed</string>
    <string name="key_vibrate_title">Enable Button Force Feedback</string>

</resources>