<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="@bool/flurry_enabled"
        android:key="flurry_enabled"
        android:summaryOff="@string/flurry_enabled_summary_off"
        android:summaryOn="@string/flurry_enabled_summary_on"
        android:title="@string/flurry_enabled_title" />

    <ListPreference
        android:entries="@array/theme_names"
        android:entryValues="@array/theme_values"
        android:key="theme"
        android:summary="@string/theme_summary"
        android:title="@string/theme_title" />

    <CheckBoxPreference
        android:defaultValue="@bool/key_vibrate"
        android:key="key_vibrate"
        android:summaryOff="@string/key_vibrate_summaryOff"
        android:summaryOn="@string/key_vibrate_summaryOn"
        android:title="@string/key_vibrate_title" />
    
    <CheckBoxPreference
        android:defaultValue="@bool/htc_bluetooth_compatibility"
        android:key="htc_bluetooth_compatibility"
        android:summaryOff="@string/htcbluetoothcompat_summaryOff"
        android:summaryOn="@string/htcbluetoothcompat_summaryOn"
        android:title="@string/htcbluetoothcompat_title" />

</PreferenceScreen>